--- a/sites/all/modules/cck/CHANGELOG.txt
+++ b/sites/all/modules/cck/CHANGELOG.txt
@@ -1,4 +1,15 @@
-// $Id: CHANGELOG.txt,v 1.1.4.76 2008/11/05 19:38:03 yched Exp $
+// $Id: CHANGELOG.txt,v 1.1.4.81 2010/06/09 01:06:29 karens Exp $
+
+5--1.x
+======
+
+5--1.11
+=======
+- #195688 by jcnventura, add print option to nodeapi.
+- Add db_rewrite_sql() check to nodereference formatters.
+- #339753 by MrGeneYUss: fix invalid admin/content/types/[type]/edit path (not actually used in the UI).
+- #341538 by gianfrasoft: fix SQL errors on field creation on rare circumstances.
+- #356908 Number : Correclty filter 'prefix' and 'suffix' properties.
 
 5--1.10
 =======
